{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 101,
  "lineage": "33ad293c-8607-cce3-c730-814459dc574d",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:910109051341:vpc/vpc-b5b255de",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-921328fa",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-99a062f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b5b255de",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-938520f8",
            "owner_id": "910109051341",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d60cff8925d28dad",
            "arn": "arn:aws:ec2:ap-south-1:910109051341:instance/i-0d1f5dd6a87d6c9df",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1f5dd6a87d6c9df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01c1ed75da9066cd2"
              }
            ],
            "primary_network_interface_id": "eni-01c1ed75da9066cd2",
            "private_dns": "ip-172-31-37-142.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.142",
            "public_dns": "ec2-13-201-68-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.68.110",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fa8a2999c9080ec7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "kube-security"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00959868",
            "tags": {
              "Name": "control-plane",
              "Type": "master-node"
            },
            "tags_all": {
              "Name": "control-plane",
              "Type": "master-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ecc028f9fb7b4cf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "i-0d1f5dd6a87d6c9df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_key_pair.deployer",
            "module.ec2_instances.aws_security_group.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d60cff8925d28dad",
            "arn": "arn:aws:ec2:ap-south-1:910109051341:instance/i-0ae1b4e12d1aee844",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae1b4e12d1aee844",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c01aea3aea285f47"
              }
            ],
            "primary_network_interface_id": "eni-0c01aea3aea285f47",
            "private_dns": "ip-172-31-33-72.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.72",
            "public_dns": "ec2-43-205-208-237.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.208.237",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e8f01c087faf82d0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "kube-security"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00959868",
            "tags": {
              "Name": "worker-01",
              "Type": "worker-node"
            },
            "tags_all": {
              "Name": "worker-01",
              "Type": "worker-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ecc028f9fb7b4cf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "i-0ae1b4e12d1aee844",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_key_pair.deployer",
            "module.ec2_instances.aws_security_group.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d60cff8925d28dad",
            "arn": "arn:aws:ec2:ap-south-1:910109051341:instance/i-099543f9a581b7d01",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099543f9a581b7d01",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0116cd35a19cbfbc4"
              }
            ],
            "primary_network_interface_id": "eni-0116cd35a19cbfbc4",
            "private_dns": "ip-172-31-38-130.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.130",
            "public_dns": "ec2-13-233-227-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.227.172",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e6861545f0b6c139",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "kube-security"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00959868",
            "tags": {
              "Name": "worker-02",
              "Type": "worker-node"
            },
            "tags_all": {
              "Name": "worker-02",
              "Type": "worker-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ecc028f9fb7b4cf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "i-099543f9a581b7d01",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_key_pair.deployer",
            "module.ec2_instances.aws_security_group.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:910109051341:security-group/sg-06ecc028f9fb7b4cf",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ecc028f9fb7b4cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "183.82.204.134/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "183.82.204.134/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kube-security",
            "name_prefix": "",
            "owner_id": "910109051341",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-b5b255de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "sg-06ecc028f9fb7b4cf",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:910109051341:security-group-rule/sgr-0be84f8f6cb803196",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0be84f8f6cb803196",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06ecc028f9fb7b4cf",
            "security_group_rule_id": "sgr-0be84f8f6cb803196",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "sgr-0be84f8f6cb803196",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:910109051341:security-group-rule/sgr-00e2aad53b433a4ea",
            "cidr_ipv4": "183.82.204.134/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-00e2aad53b433a4ea",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06ecc028f9fb7b4cf",
            "security_group_rule_id": "sgr-00e2aad53b433a4ea",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "sgr-00e2aad53b433a4ea",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_kube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:910109051341:security-group-rule/sgr-0f9a49e71f8e3999f",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0f9a49e71f8e3999f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06ecc028f9fb7b4cf",
            "security_group_rule_id": "sgr-0f9a49e71f8e3999f",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "sgr-0f9a49e71f8e3999f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.kubernetes",
            "module.ec2_instances.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:910109051341:security-group-rule/sgr-0b41eb892e82d3750",
            "cidr_ipv4": "183.82.204.134/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b41eb892e82d3750",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06ecc028f9fb7b4cf",
            "security_group_rule_id": "sgr-0b41eb892e82d3750",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910109051341",
            "id": "sgr-0b41eb892e82d3750",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instances.aws_security_group.kubernetes"
          ]
        }
      ]
    }
  ]
}